# Rust-Todo-App

./: .env  Cargo.toml  Makefile  env.example
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  prelude.rs  task.rs  tasks.rs  user.rs  user_profile.rs
migration/src/: lib.rs  m20220101_000001_create_task_table.rs  m20241203_073620_create_user_table.rs  m20241205_064650_create_user_profile_table.rs
migrations/: 20241114053741_create_task_table.up.sql
src/: api_response.rs  controller.rs  error.rs  form.rs  main.rs  model.rs  serializer.rs
src/auth/: mod.rs
src/controller/: auth_controller.rs  mod.rs  permission_controller.rs  role_controller.rs  task_controller.rs  user_controller.rs  user_role_controller.rs
src/form/: mod.rs  role_form.rs  task_form.rs  user_form.rs
src/models/: mod.rs  task.rs  user.rs
src/models/_entities/: mod.rs  permission.rs  prelude.rs  task.rs  user.rs  user_profile.rs
storage/: task.db
