[package]
name = "sms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7.7", features=["macros"] }
tokio = { version="1.9.0", features=["full"] }
sqlx = { version="0.8.2", features=["sqlite", "runtime-tokio", "tls-native-tls", "macros"]}

# serde
serde = { version = "1.0.215", features=["derive"] }
serde_json = { version="1.0.132" }

# env
dotenvy = { version="0.15.7" }
