[package]
name = "task_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7.9", features=["macros"] }
tokio = { version="1.41.1", features=["full"] }
sqlx = { version="0.8.2", features=["sqlite", "runtime-tokio", "tls-native-tls", "macros", "chrono"]}

chrono = {version="0.4.38", features=["serde"]}

# serde
serde = { version = "1.0.215", features=["derive"] }
serde_json = { version="1.0.133" }

# env
dotenvy = { version="0.15.7" }
