[package]
name = "task_app"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = {path="entity"}
axum = { version="0.7.9", features=["macros"] }
tokio = { version="1.41.1", features=["full"] }
sqlx = { version="0.8.2", features=["sqlite", "runtime-tokio", "tls-native-tls", "macros", "chrono"]}
sea-orm = { version = "1.1.1", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono" ] }
tower-http = { version="0.6.2", features=["trace"]}

chrono = {version="0.4.38", features=["serde"]}

# serde
serde = { version = "1.0.215", features=["derive"] }
serde_json = { version="1.0.133" }

# env
dotenvy = { version="0.15.7" }

tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features=["env-filter", "ansi"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
